--- a/exe1/index.html
+++ b/exe1/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="image/running_shoes_PNG5816.png">
+                    <img src="image/running_shoes_PNG5816 (2).png">
                     <h2>Nike Shoes</h2>
                 </div>
 
@@ -34,7 +34,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="image/running_shoes_PNG5816.png">
+                    <img src="image/running_shoes_PNG5816 (2).png">
                     <h2>Nike Shoes</h2>
                 </div>
 
@@ -53,7 +53,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="image/running_shoes_PNG5816.png">
+                    <img src="image/running_shoes_PNG5816 (2).png">
                     <h2>Nike Shoes</h2>
                 </div>
 
